--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,8 +59,8 @@ include:
   - project: 'lc-templates/id_tokens'
     file: 'id_tokens.yml'
   # [Optional] checks preliminary to running the actual CI test
-  - project: 'radiuss/radiuss-shared-ci'
-    ref: 'v2025.07.0'
-    file: 'utilities/preliminary-ignore-draft-pr.yml'
-  # pipelines subscribed by the project
+  # - project: 'radiuss/radiuss-shared-ci'
+  #   ref: 'v2025.07.0'
+  #   file: 'utilities/preliminary-ignore-draft-pr.yml'
+  # # pipelines subscribed by the project
   - local: '.gitlab/subscribed-pipelines.yml'
