Remove subscribed pipelines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,4 +49,4 @@ include:
   #   ref: 'v2025.07.0'
   #   file: 'utilities/preliminary-ignore-draft-pr.yml'
   # # pipelines subscribed by the project
-  - local: '.gitlab/subscribed-pipelines.yml'
+  # - local: '.gitlab/subscribed-pipelines.yml'
