Dont use pytest-to-gh-benchmakr

--- a/.gitlab/jobs/performances.yml
+++ b/.gitlab/jobs/performances.yml
@@ -19,12 +19,12 @@ ruby-performance-job-2:
     TEST_DESCRIPTION: "Job 2"
 
 # Convert pytest results to GitHub benchmark format
-convert-pytest-to-gh-benchmark:
-  extends: .pytest_to_gh_benchmark
-  stage: perf-runs
-  needs:
-    - ruby-performance-job-1
-    - ruby-performance-job-2
+# convert-pytest-to-gh-benchmark:
+#   extends: .pytest_to_gh_benchmark
+#   stage: perf-runs
+#   needs:
+#     - ruby-performance-job-1
+#     - ruby-performance-job-2
 
 # Optional: Report to GitHub benchmark API (requires GITHUB_TOKEN)
 # report-to-github-benchmark:
