--- a/.github/workflows/pytest-benchmark.yml
+++ b/.github/workflows/pytest-benchmark.yml
@@ -40,7 +40,7 @@ jobs:
       continue-on-error: true
       uses: benchmark-action/github-action-benchmark@v1
       with:
-        tool: 'pytest-benchmark'
+        tool: 'pytest'
         output-file-path: performance-results/python_benchmark.json
         github-token: ${{ secrets.GITHUB_TOKEN }}
         auto-push: ${{ github.ref == 'refs/heads/main' }}
