--- a/.github/workflows/caliper-benchmark.yml
+++ b/.github/workflows/caliper-benchmark.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: write
+
 jobs:
   cpp-benchmarks:
     runs-on: ubuntu-latest
