--- a/.github/workflows/pytest-benchmark.yml
+++ b/.github/workflows/pytest-benchmark.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: write
+
 jobs:
   python-benchmarks:
     runs-on: ubuntu-latest
