--- a/.github/workflows/pytest-benchmark.yml
+++ b/.github/workflows/pytest-benchmark.yml
@@ -48,7 +48,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         auto-push: ${{ github.ref == 'refs/heads/main' }}
         gh-pages-branch: gh-pages
-        benchmark-data-dir-path: dev/pytest/bench
+        benchmark-data-dir-path: dev/bench
         comment-always: true
         fail-on-alert: true
         alert-threshold: '120%'
