--- a/.github/workflows/caliper-benchmark.yml
+++ b/.github/workflows/caliper-benchmark.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   cpp-benchmarks:
@@ -58,7 +58,8 @@ jobs:
         auto-push: ${{ github.ref == 'refs/heads/main' }}
         gh-pages-branch: gh-pages
         benchmark-data-dir-path: dev/bench
-        comment-always: true
+        comment-always: false
+        summary-always: true
         fail-on-alert: true
         alert-threshold: '120%'
         max-items-in-chart: 100
